# ink

./: .clang-format  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  progresslog.md
.cache/clangd/index/: _fixes.hpp.496650145D2BD0B6.idx  _vectorize.hpp.8045A346CD18CDEE.idx  application.h.EAC1F81F7111999B.idx  buffers.cpp.635236182B38FB0D.idx  buffers.h.19CA4213C3C10834.idx  c_box_collider.cpp.AA4E3B032DFEA39F.idx  c_box_collider.h.D3D4400F7773340E.idx  c_character_controller.cpp.F983862532867F2E.idx  c_character_controller.h.6B5C61F320EA8AEB.idx  c_physics_body.cpp.1DCD97C6D41CD92D.idx  c_physics_body.h.737C0F301460C60C.idx  c_render_object.cpp.FB0A2CC10A67D4EC.idx  c_render_object.h.3EF50944AA89A4F1.idx  camera.cpp.3720A2AE3C1E242C.idx  camera.h.A3FCE1EEF2DDC2DE.idx  cocoa_init.m.C86CA8281A653F08.idx  cocoa_joystick.h.9EF8B58D34C75B46.idx  cocoa_joystick.m.99AFD2B61C0E0256.idx  cocoa_monitor.m.86B024A99F737F83.idx  cocoa_platform.h.CA5C61C9B08375C6.idx  cocoa_time.c.9134D942D858EAF2.idx  cocoa_time.h.DB9E7B7D0E27AD71.idx  cocoa_window.m.46120CE7F44FC0A1.idx  collision_event.h.6BCE4CED381C5A65.idx  common.hpp.20C0D8FBCC206528.idx  component.h.297E087BC946F608.idx  compute_common.hpp.19FC919EBBCEDF18.idx  compute_vector_decl.hpp.E27CF54BFB45CF59.idx  compute_vector_relational.hpp.2B0DFECAFFD947CD.idx  constants.hpp.1890F8453DD3C4FA.idx  constants.inl.0F06C6B539EC9A12.idx  context.c.23C0E4B567385C39.idx  egl_context.c.A2517E64BD991AD7.idx  entity.cpp.B7834D8993B7B520.idx  entity.h.6F5DA9D709E9F578.idx  entry.cpp.1EDB77B3A8CFD070.idx  epsilon.hpp.D4875B6E62013BAF.idx  epsilon.inl.E3E403FC85F9D8F4.idx  event.h.3CA8F356C7B4C5F7.idx  exponential.hpp.5A90FE76470AD7C3.idx  (+209 more)
ink/docs/ecs/: c_box_collider.md
ink/include/: ink.h
ink/include/core/: application.h  camera.h  shader.h  window.h
ink/include/ecs/: c_RenderObject.h  c_box_collider.h  c_character_controller.h  c_physics_body.h  c_physics_dynamic_body.h  c_physics_static_body.h  c_render_object.h  component.h  entity.h
ink/include/ecs/components/: c_box_collider.h  c_character_controller.h  c_physics_body.h  c_render_object.h
ink/include/physics/: physicsBase.h  physicsEngine.h  physics_base.h  physics_engine.h
ink/include/renderer/: buffers.h  elementBuffer.h  renderObject.h  render_object.h  renderer.h  vertexArray.h  vertexBuffer.h
ink/src/: entry.cpp  ink.h  main.cpp  typedefs.h
ink/src/core/: application.h  camera.cpp  input.h  main.cpp  shader.cpp  window.cpp  window.h
ink/src/ecs/: c_RenderObject.cpp  c_box_collider.cpp  c_character_controller.cpp  c_physics_body.cpp  c_physics_dynamic_body.cpp  c_render_object.cpp  component.h  entity.cpp  entity.h
ink/src/ecs/components/: c_box_collider.cpp  c_box_collider.h  c_character_controller.cpp  c_character_controller.h  c_physics_body.cpp  c_physics_body.h  c_render_object.cpp  c_render_object.h
ink/src/event/: collision_event.h  event.h  input_event.h  movement_event.h
ink/src/physics/: physicsBase.cpp  physicsEngine.cpp  physics_base.cpp  physics_base.h  physics_engine.cpp  physics_engine.h
ink/src/renderer/: buffers.cpp  buffers.h  camera.cpp  camera.h  elementBuffer.cpp  renderObject.cpp  render_object.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  vertexArray.cpp  vertexBuffer.cpp  vertex_array.cpp
shaders/: tri.vs
